--- a/src/HomePage/Home.css
+++ b/src/HomePage/Home.css
@@ -1,13 +1,11 @@
-.container {
-    background-image: url('./backgroundNeon.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;     
-    background-position: center; 
+.container img {
     height: 100vh;
     width: 100vw;
-    overflow: hidden;
 }
+.container {
+    overflow: hidden;
 
+}
 .iconLanguage {
     position: absolute;
     top: 10px; /* Adjust as needed */
@@ -22,8 +20,6 @@
     margin-left: 10px; 
     cursor: pointer;
   }
-
-
 
 #riddle1 {
     position: absolute;
