--- a/src/R1/RiddleOne.css
+++ b/src/R1/RiddleOne.css
@@ -1,14 +1,19 @@
 .r1Main {
-    background: url('./schoolboard.jpg');
-    background-size: cover;
-    background-position: center;
-    height: 100vh;
-    width: 100vw;
     overflow: hidden;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+}
+.r1Main img {
+    margin-top: 5vh;
+}
+.container {
+    background: url('./schoolboard.jpg');
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    width: 100vw;
 }
 
 #carousel{
@@ -21,4 +26,7 @@
     width: 150px; 
     height: 150px;
     margin: 0 50px; 
+}
+.test {
+    color: wheat;
 }
